--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -320,37 +320,23 @@ Full-Width Styles
   bottom: -40px;
   right: 0;
   height: 70px;
-  background: url('../images/icon_download.png') no-repeat 0% 90%;
+  background: url('../images/icon_download.png') no-repeat 40% 95%;
 }
 
-.zip_download_link {
+.dmg_download_link {
   display: block;
   float: right;
-  width: 90px;
-  height:70px;
+  width: 100px;
+  height:100px;
   text-indent: -5000px;
   overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom left;
+  background: url(../images/dmg_folder.png) no-repeat;
 }
 
-.tar_download_link {
-  display: block;
-  float: right;
-  width: 90px;
-  height:70px;
-  text-indent: -5000px;
-  overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom right;
-  margin-left: 10px;
+.dmg_download_link:hover {
+  background: url(../images/dmg_folder.png) no-repeat;
 }
 
-.zip_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top left;
-}
-
-.tar_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top right;
-}
 
 #main_content_wrap {
   background: #f2f2f2;
